--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <h1 class="title"><img src="./src/assets/img/logo.png" alt="Devs&Dragons logo"></h1>
         <button class="duel-button">Duel!</button>
@@ -29,6 +30,13 @@
         <span class="message"></span>
         <button class="modal-close-button" id="close-button"><i class="fa fa-times"></i></button>
     </div>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="container">
+            <p>&copy; 2024 Devs&Dragons. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script type="module" src="./src/index.js"></script>
 </body>
